<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"

    android:layout_height="match_parent"
    tools:context=".ScheduleMeeting">
    <androidx.appcompat.widget.Toolbar

        android:id="@+id/my_toolbar_schedule"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/colorPrimary"

        app:contentInsetLeft="0dp"
        app:contentInsetStart="0dp"

        app:contentInsetRight="0dp"
        app:contentInsetEnd="0dp"
        android:elevation="4dp"


        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
        >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            >
            <Button
                android:id="@+id/btnBack"


                android:textColor="@android:color/white"
                android:background="?android:attr/selectableItemBackground"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="-8dp"
                android:textSize="18dp"
                android:drawablePadding="-24dp"
                android:layout_centerVertical="true"
                android:drawableLeft="@drawable/ic_chevron_left_white_52dp"

                android:text="BACK"

                />
            <TextView

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sechedule_a_meeting"
                android:textStyle="bold"
                android:textSize="20sp"
                android:textColor="@android:color/white"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:layout_centerInParent="true"/>

        </RelativeLayout>
    </androidx.appcompat.widget.Toolbar>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="20dp"
        >
        <Button
            android:textColor="@android:color/darker_gray"
          android:paddingLeft="16dp"
            android:id="@+id/btnDate"
            android:layout_marginBottom="16dp"
            android:layout_marginTop="16dp"
            android:textStyle="bold"
            android:textAllCaps="false"
            android:textSize="24sp"
            android:textAlignment="textStart"
            android:background="@drawable/button_picker"
            android:layout_width="match_parent"
                android:text="@string/meeting_date"
            android:drawableRight="@drawable/ic_arrow_drop_down_grey_52dp"
            android:layout_height="wrap_content"/>
        <Button
            android:id="@+id/btnStartTime"
            android:textColor="@android:color/darker_gray"
            android:paddingLeft="16dp"
            android:layout_marginBottom="16dp"
            android:layout_marginTop="16dp"
            android:textStyle="bold"
            android:textAllCaps="false"
            android:textSize="24sp"
            android:textAlignment="textStart"
            android:background="@drawable/button_picker"
            android:layout_width="match_parent"
            android:text="@string/start_time"
            android:drawableRight="@drawable/ic_arrow_drop_down_grey_52dp"
            android:layout_height="wrap_content"/>
        <Button
            android:id="@+id/btnEndTime"
            android:textColor="@android:color/darker_gray"
            android:paddingLeft="16dp"
            android:layout_marginBottom="16dp"
            android:layout_marginTop="16dp"
            android:textStyle="bold"
            android:textAllCaps="false"
            android:textSize="24sp"
            android:textAlignment="textStart"
            android:background="@drawable/button_picker"
            android:layout_width="match_parent"
            android:text="@string/end_time"
            android:drawableRight="@drawable/ic_arrow_drop_down_grey_52dp"
            android:layout_height="wrap_content"/>
        <EditText
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:lines="6"
            android:textStyle="bold"
            android:textAllCaps="false"
            android:textSize="24sp"
            android:hint="@string/description"
            android:layout_gravity="start"
            android:textAlignment="textStart"
            android:paddingLeft="16dp"

            android:background="@drawable/edit_text_white"
            android:layout_marginBottom="16dp"
            android:layout_marginTop="16dp"/>
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/button"
            android:text="SUBMIT"
            android:textColor="@android:color/white"
            android:textSize="20sp"
            android:id="@+id/btnSubmit"
            android:padding="24dp"

            android:layout_marginTop="36dp"
            android:layout_marginBottom="8dp"
         />


    </LinearLayout>

</LinearLayout>