<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent"
    tools:context=".MainActivity">
    <androidx.appcompat.widget.Toolbar

        android:id="@+id/my_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/colorPrimary"

        app:contentInsetLeft="0dp"
        app:contentInsetStart="0dp"

        app:contentInsetRight="0dp"
        app:contentInsetEnd="0dp"
        android:elevation="4dp"


        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
        >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            >
            <Button
                android:id="@+id/btnPrev"


            android:textColor="@android:color/white"
            android:background="?android:attr/selectableItemBackground"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="-8dp"
            android:textSize="18sp"
                android:drawablePadding="-24dp"
                android:layout_centerVertical="true"
            android:drawableLeft="@drawable/ic_chevron_left_white_52dp"

            android:text="@string/prev"

            />
            <TextView
                android:id="@+id/tvCurrentDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_06_08_2015"
                android:textStyle="bold"
                android:textSize="20sp"
                android:textColor="@android:color/white"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:layout_centerInParent="true"/>
            <Button
                android:id="@+id/btnNext"
                android:layout_alignParentRight="true"
                android:textColor="@android:color/white"
                android:background="?android:attr/selectableItemBackground"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingRight="-8dp"
                android:textSize="18sp"
                android:drawablePadding="-24dp"
                android:layout_centerVertical="true"
                android:drawableRight="@drawable/ic_chevron_right_white_52dp"

                android:text="@string/next"

                />
        </RelativeLayout>
    </androidx.appcompat.widget.Toolbar>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <androidx.recyclerview.widget.RecyclerView

        android:id="@+id/recyclerview"
        android:layout_width="match_parent"
        android:paddingBottom="64dp"
        android:layout_height="match_parent" />
    <LinearLayout
        android:layout_width="match_parent"
       android:layout_alignParentBottom="true"
        android:background="@color/lightGrey"
        android:orientation="vertical"
        android:layout_height="wrap_content">
        <View

            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/darkGrey"/>
            <Button
                android:text="@string/schedule_company_meeeting"
                android:textColor="@android:color/white"
                android:textSize="20sp"
                android:id="@+id/btnSchedule"

                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:layout_marginLeft="24dp"
                android:layout_marginRight="24dp"
                android:background="@drawable/button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                />
    </LinearLayout>
    </RelativeLayout>

</LinearLayout>